QA [Long Question wrap issue] resolved

--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -71,6 +71,8 @@
   max-height: 5.5rem;
   width: 100%;
   overflow-y: auto;
+  word-break: break-word;
+  white-space: break-spaces;
 }
 .question > div:nth-child(1) {
   width: 100%;
